--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body class="page">
-<script src="../scripts/index.js"></script>
+  <script src="../scripts/index.js" type="module"></script>
 </body>
 </html>
