--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="../vendor/keyboard_icon_182180.ico" type="image/x-icon">
   <link rel="stylesheet" href="../styles/style.css">
 </head>
-<body class="page">
+<body>
   <script src="../scripts/index.js" type="module"></script>
 </body>
 </html>
